[gd_scene load_steps=17 format=3 uid="uid://cxy50a648rcw4"]

[ext_resource type="Script" uid="uid://bbjc18t8wghjy" path="res://scripts/start_menu.gd" id="1_e58y3"]
[ext_resource type="Texture2D" uid="uid://ctb04o4bjpf5g" path="res://assets/ui/menu/menuBackground.png" id="1_nxjfj"]
[ext_resource type="FontFile" uid="uid://dj7k136noki4a" path="res://assets/fonts/Jersey10-Regular.ttf" id="2_u4qax"]
[ext_resource type="Texture2D" uid="uid://6yf6tgqvsmkh" path="res://assets/ui/menu/menuContainer.png" id="3_5byqq"]
[ext_resource type="Texture2D" uid="uid://blbvd8b3uyyls" path="res://assets/ui/menu/newGameIcon.png" id="4_e58y3"]
[ext_resource type="Texture2D" uid="uid://cfyu64fcmo72d" path="res://assets/ui/menu/continueIcon.png" id="5_apowk"]
[ext_resource type="Script" uid="uid://bm42415di484k" path="res://scripts/menu_icon_hover.gd" id="5_u4qax"]
[ext_resource type="Texture2D" uid="uid://kje4ks08a8qe" path="res://assets/ui/menu/hoverIcon.png" id="6_5byqq"]
[ext_resource type="Texture2D" uid="uid://kxslwe7w0xac" path="res://assets/ui/menu/optionsIcon.png" id="6_vnuwp"]
[ext_resource type="Texture2D" uid="uid://cb5jvkqi2014l" path="res://assets/ui/menu/exitIcon.png" id="7_egh8s"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b1kog"]
texture = ExtResource("3_5byqq")
texture_margin_left = 48.0
texture_margin_top = 24.0
texture_margin_right = 48.0
texture_margin_bottom = 24.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_apowk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ruo1u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e58y3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s0oe1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_trkcg"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e58y3")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nxjfj")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -478.0
offset_right = 478.0
offset_bottom = 533.0
grow_horizontal = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0.607843, 0.298039, 1)
theme_override_colors/font_outline_color = Color(0.12549, 0.0823529, 0.239216, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2_u4qax")
theme_override_font_sizes/font_size = 170
text = "FISHING GAME"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_b1kog")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ButtonNewGame" type="Button" parent="VBoxContainer/CenterContainer/PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.972549, 0.933333, 0.737255, 1)
theme_override_constants/h_separation = 5
theme_override_fonts/font = ExtResource("2_u4qax")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_apowk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ruo1u")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_e58y3")
theme_override_styles/normal = SubResource("StyleBoxEmpty_s0oe1")
text = "NEW GAME"
flat = true
alignment = 0
script = ExtResource("5_u4qax")
icon_normal = ExtResource("4_e58y3")
icon_hover = ExtResource("6_5byqq")
icon_pressed = ExtResource("4_e58y3")

[node name="ButtonContinue" type="Button" parent="VBoxContainer/CenterContainer/PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.972549, 0.933333, 0.737255, 1)
theme_override_constants/h_separation = 5
theme_override_fonts/font = ExtResource("2_u4qax")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_apowk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ruo1u")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_e58y3")
theme_override_styles/normal = SubResource("StyleBoxEmpty_s0oe1")
text = "CONTINUE"
flat = true
alignment = 0
script = ExtResource("5_u4qax")
icon_normal = ExtResource("5_apowk")
icon_hover = ExtResource("6_5byqq")
icon_pressed = ExtResource("5_apowk")

[node name="ButtonOptions" type="Button" parent="VBoxContainer/CenterContainer/PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.972549, 0.933333, 0.737255, 1)
theme_override_constants/h_separation = 5
theme_override_fonts/font = ExtResource("2_u4qax")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_apowk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ruo1u")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_e58y3")
theme_override_styles/normal = SubResource("StyleBoxEmpty_s0oe1")
text = "OPTIONS"
flat = true
alignment = 0
script = ExtResource("5_u4qax")
icon_normal = ExtResource("6_vnuwp")
icon_hover = ExtResource("6_5byqq")
icon_pressed = ExtResource("6_vnuwp")

[node name="ButtonExit" type="Button" parent="VBoxContainer/CenterContainer/PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.972549, 0.933333, 0.737255, 1)
theme_override_constants/h_separation = 5
theme_override_fonts/font = ExtResource("2_u4qax")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_apowk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_trkcg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_e58y3")
theme_override_styles/normal = SubResource("StyleBoxEmpty_s0oe1")
text = "EXIT"
flat = true
alignment = 0
script = ExtResource("5_u4qax")
icon_normal = ExtResource("7_egh8s")
icon_hover = ExtResource("6_5byqq")
icon_pressed = ExtResource("7_egh8s")
